tests/ui/type-alias-impl-trait/define_opaques_attr/foreign_type.rs
#![feature(type_alias_impl_trait)]

#[define_opaque(String)]
//~^ ERROR: only opaque types defined in the local crate can be defined
fn main() {}
